tests/baselines/reference/importTag12.errors.txt
/foo.js(2,20): error TS1109: Expression expected.


==== /foo.js (1 errors) ====
    /**
     * @import foo from
                       
!!! error TS1109: Expression expected.
     */
    